--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@truffle/hdwallet-provider": "^1.2.3"
+    "@truffle/hdwallet-provider": "^1.2.3",
+    "dotenv": "^10.0.0"
   }
 }
